--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-# ignore everything: 
-
+# Ignore everything
 *
 
-#But these: 
+# Except the src folder
+!/src/
+!/src/**
 
+# Also allow the .gitignore file itself
 !.gitignore
-!src/
-!src/** 
 
-src/__pycache__
+# ignore pyc files
+
+*.pyc
